--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Ian Bruton
 description: Computer Science Student
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://dl.dropboxusercontent.com/u/19762650/semiprof-tie.png
 
 #
 # Flags below are optional
