--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: CS 371p Fall 2015: - Ian Bruton 
+name: CS 371p Fall 2015 - Ian Bruton 
 
 # Short bio or description (displayed in the header)
 description: Computer Science Student
