--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: CS 371p Fall 2015: Ian Bruton 
+name: CS371p Fall 2015: Ian Bruton
 
 # Short bio or description (displayed in the header)
-description: Computer Science Student
+description: Blog of my finding in OOP for extra credit!
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://dl.dropboxusercontent.com/u/19762650/semiprof-tie.png
