Updated website title

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: CS371p Fall 2015: Ian Bruton
+name: CS371p Fall 2015&#58; Ian Bruton
 
 # Short bio or description (displayed in the header)
 description: Blog of my finding in OOP for extra credit!
